prevent video from loading on mobile

--- a/core/static/core/scss/components/header.scss
+++ b/core/static/core/scss/components/header.scss
@@ -60,11 +60,6 @@ header.header {
     background: url(static('core/images/header-poster.jpg')) no-repeat center/cover;
 
     video {
-      // TODO: prevent video from loading on mobile somehow!
-      display: none;
-      @include breakpoint($large-up) {
-        display: inherit;
-      }
       min-height: 100%;
       min-width: 100%;
     }
